--- a/Success Motors Org/force-app/main/default/lwc/accountDetailLWC/accountDetailLWC.html
+++ b/Success Motors Org/force-app/main/default/lwc/accountDetailLWC/accountDetailLWC.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Accounts Info" if:false={recordId}>
+    <lightning-card title={label} if:false={recordId}>
             <lightning-input
             class="slds-var-p-around_medium"
             variant="label-hidden"
