--- a/Success Motors Org/force-app/main/default/lwc/accountDetailTable/accountDetailTable.html
+++ b/Success Motors Org/force-app/main/default/lwc/accountDetailTable/accountDetailTable.html
@@ -1,5 +1,5 @@
 <template>
-    <table class="slds-table slds-table_cell-buffer slds-table_bordered" aria-label="Opportunities">
+    <table class="slds-table slds-table_cell-buffer slds-table_bordered" aria-label={label}>
         <thead>
           <tr class="slds-line-height_reset">
             <th class="" scope="col">
