--- a/Success Motors Org/force-app/main/default/lwc/accountPagination/accountPagination.html
+++ b/Success Motors Org/force-app/main/default/lwc/accountPagination/accountPagination.html
@@ -4,7 +4,8 @@
             <lightning-button label="Previous" 
             icon-name="utility:chevronleft"
             onclick={previousHandler}
-            disabled={disablePrevious}></lightning-button>
+            disabled={disablePrevious}>
+            </lightning-button>
         </lightning-layout-item>
         <lightning-layout-item padding="around-small" flexibility="grow">
             <p class="slds-text-align_center">Displaying {currentPage} of {totalPage} Page</p>
@@ -14,7 +15,8 @@
             icon-name="utility:chevronright"
             icon-position="right"
             onclick={nextHandler}
-            disabled={disableNext}></lightning-button>
+            disabled={disableNext}>
+            </lightning-button>
         </lightning-layout-item>
     </lightning-layout>
 </template>
