--- a/Success Motors Org/force-app/main/default/lwc/generateInvoice/generateInvoice.html
+++ b/Success Motors Org/force-app/main/default/lwc/generateInvoice/generateInvoice.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-modal-header label='Generate Invoice'></lightning-modal-header>
+    <lightning-modal-header label={label}></lightning-modal-header>
     <lightning-modal-body>
         <template lwc:if={loaded}>
             <iframe
